<resources>
    <string name="app_name">Tracer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="email">Email</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account">"Don't have an account? "</string>
    <string name="username">Username</string>
    <string name="empty_fields">Fill in all fields</string>
    <string name="invalid_login">Incorrect username or password</string>
    <string name="error">Unexpected error has occurred</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="not_available">It is not available</string>

    <string name="videogames">Videogames</string>
    <string name="lists">Lists</string>
    <string name="reviews">Reviews</string>
    <string name="see_all">See all</string>
    <string name="latest_games">Latest games</string>
    <string name="profile">Profile</string>
    <string name="followed">Followed</string>
    <string name="followers">Followers</string>
    <string name="games_played">Games played</string>
    <string name="description">Description</string>
    <string name="edit_profile">Edit profile</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="total_games_played">Games</string>
    <string name="friends_activity">Friends activity</string>
    <string name="edit_your_profile_pic">Edit your profile pic</string>
    <string name="something_goes_wrong">Something goes wrong</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="content_descr_user_profile_pic">User profile pic</string>
    <string name="metacritic_score">Metacritic Score</string>
    <string name="users_score">Users Score</string>
    <string name="played">Played</string>
    <string name="backlog" translatable="false">Backlog</string>
    <string name="playing">Playing</string>
    <string name="rate">Rate</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here...</string>
    <string name="submit">Submit</string>
    <string name="users">Users</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="save_changes">Save changes</string>
    <string name="descr_hint">Say something cool about you!</string>
    <string name="change_email">Change e-mail</string>
    <string name="change_username">Change username</string>
    <string name="nothing_was_found">Nothing was found :(</string>
    <string name="delete">Delete</string>
    <string name="alert_delete_msg">Are you sure? Your review will be delete and it can not be recovered</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="alert_discard_msg">Are you sure? Changes will be lost</string>
    <string name="have_you_played_it">Have you played it?</string>
    <string name="alert_dont_played_msg">Play the game before making a review, would you kindly?</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="there_is_nothing_to_see_here">There is nothing to see here</string>
</resources>