<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ui_search"
            android:title="@string/search"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/avatar_default"
            android:title="@string/profile"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/nav_logout"
                android:title="@string/log_out"
                />
        </menu>
    </item>
</menu>