<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.nav.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">
        <EditText
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/homemadeSearchViewEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ui_search"
            android:ems="10"
            android:hint="@string/search"
            android:inputType="text" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/searchTabContainer"
            android:elevation="0dp"
            style="@style/MyTabContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="auto">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videogames"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/users" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews" />
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/searchProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPrimary"
        android:indeterminateDrawable="@drawable/ui_charging"
        android:padding="16dp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/nothingFoundTxtV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:alpha="0.65"
        android:text="@string/nothing_was_found"
        android:visibility="gone"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>