<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.nav.ProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorPrimary"
        android:elevation="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/fgt_profile_userProfilePic"
                    android:src="@drawable/avatar_default"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="3dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fgt_profile_usernameTxtView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/followed"
                                android:textAlignment="center"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/followingTxtV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textAlignment="center"
                                android:textSize="14sp" />
                            <TextView
                                android:id="@+id/followersTxtV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descrTxtV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="250" />

            <Button
                android:id="@+id/followBtn"
                style="@style/MyBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/follow"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/user_tabContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            style="@style/MyTabContainer"/>
    </LinearLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/user_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>